[package]
name = "wasm-dist-bhtsne"
version = "1.1.1"
authors = [
    "J16N",
    "lv291 <baiunco291@proton.me>",
    "frjnn <f.iannelli.francesco229@gmail.com>",
]
edition = "2021"
license = "MIT"
categories = ["algorithms", "science", "visualization"]
keywords = [
    "tsne",
    "data-visualization",
    "webassembly",
    "wasm",
    "rust",
    "qdrant",
]
readme = "README.md"
homepage = "https://github.com/J16N/wasm_dist_bhtsne#readme"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
parallel = ["wasm-bindgen-rayon"]

[dependencies]
wasm-bindgen = "0.2.92"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2.12", features = ["js"] }
wasm-bindgen-rayon = { version = "1.2.1", optional = true }
rand_distr = "0.4.3"
rayon = { version = "1.9.0", features = ["web_spin_lock"] }
rand = "0.8.5"
num-traits = "0.2.18"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
hora = "0.1.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
